--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/require-default-props": "off",
+    "react/prop-types": "off",
     "no-param-reassign": "off",
     "jsx-a11y/alt-text": "off",
     "react/react-in-jsx-scope": "off",
