--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@fontsource/open-sans": "^4.5.0",
 		"@fontsource/raleway": "^4.5.0",
 		"@fontsource/roboto": "^4.5.8",
+		"ajv": "^8.17.1",
 		"apexcharts": "^3.27.3",
 		"axios": "^1.2.0",
 		"classnames": "2.3.1",
